--- a/apps/staking/project.json
+++ b/apps/staking/project.json
@@ -68,8 +68,9 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "staking:build",
-        "hmr": true,
-        "port": 4201
+        "hmr": false,
+        "port": 4201,
+        "allowedHosts": "safe.testedge2.haqq.network"
       },
       "configurations": {
         "development": {
